[project]
name = "diamond-nagg-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WHTowbin", email = "24940778+whtowbin@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ftir-omnic-map-reader>=1.0.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pybaselines>=1.2.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "xarray>=2025.4.0",
]

[project.scripts]
diamond-nagg-map = "diamond_nagg_map:main"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
